--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ProfileMe.dev</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
-    <link rel="icon" href="img/logo.PNG" type="image/png"> <!-- สำหรับ .png -->
+    <link rel="icon" href="img/logo.PNG" type="image/png">
 </head>
 <body>
     <!-- header -->
